# crazyflie-link-cpp

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  LICENSE.md  MANIFEST.in  Makefile  README.md  README.md.save  benchmark.py  cmake_install.cmake  console.py  generate_best_delay.py  log.txt  setup.py  submodule_cmake_template.txt  test_python_bindings.py  version
.github/workflows/: CI.yml  publish.yaml
examples/: PacketUtils.hpp  README.md  TODO-Design.txt  appChannelTest.cpp  basicParam.cpp  basicParamCSV.cpp  basicParamWrite.cpp  basicSave.cpp  basicToc.cpp  benchmark copy.cpp  benchmark.cpp  benchmark_backup.cpp  broadcast.cpp  broadcast.py  broadcast_and_console.cpp  console.cpp  console.py  get_toc.cpp  logViaAppChannel.cpp  param_write.cpp  resetUSB.cpp  scan.cpp  scan.py  set_param.cpp  test_python_bindings.py  toc.cpp  version.py
include/: ConnectionImpl.h  ConnectionWrapper.h  Crazyflie.h  LoggingCrazyflieWrapper.h  Param.h  README.md  Toc.h  debug.h  utils.hpp  utilsPlus.hpp
include/crazyflieCppLink/: Connection.h  Packet.hpp  Version.h  utils.hpp
include/crazyflieLinkCpp/: Connection.h  ConnectionPlus.h  ConnectionWrapper.h  Packet.hpp  Param.h  Toc.h  Version.h  utils.hpp
include/native_link/: Connection.h  Packet.hpp
src/: Connection.cpp  Connection.h  ConnectionImpl.h  ConnectionPlus.cpp  ConnectionPlus.h  ConnectionWrapper.cpp  Crazyflie.cpp  Crazyflie.h  CrazyflieUSB.cpp  CrazyflieUSB.h  CrazyflieUSBThread.cpp  CrazyflieUSBThread.h  Crazyradio.cpp  Crazyradio.h  CrazyradioThread.cpp  CrazyradioThread.h  LoggingCrazyflieWrapper.cpp  Packet.hpp  Param.cpp  README.md  Toc.cpp  Toc.h  USBDevice.cpp  USBDevice.h  USBManager.cpp  USBManager.h  Version.cpp  debug.cpp  debug.h  python_bindings.cpp  toc.h  utils.hpp
test/: benchmark.cpp  console.cpp  console.py  main.cpp  scan.cpp
